--- a/src/main/resources/templates/Layout/Home/homepage.html
+++ b/src/main/resources/templates/Layout/Home/homepage.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head th:replace="Fragment/lib.html::lib('Home')">
 </head>
 <body>
 <header th:replace="Fragment/lib.html::nav">
-
 </header>
 
 </body>
